Added link to Kafka EventSource
Signed-off-by: Simon Woodman <swoodman@redhat.com>

--- a/_posts/2019-09-20-knative.md
+++ b/_posts/2019-09-20-knative.md
@@ -12,7 +12,7 @@ Further, it offers declarative ways to bind applications to events and data stre
 
 <!--more-->
 
-Apache Kafka can be used in Knative applications in two ways: firstly, Kafka can be used as the underlying transport for internal Channels; and secondly, it can be used as the source of events.
+Apache Kafka can be used in Knative applications in [two ways](https://github.com/knative/eventing-contrib/tree/master/kafka): firstly, Kafka can be used as the underlying transport for internal Channels; and secondly, it can be used as the source of events.
 This blog post will focus on the latter and demonstrate how to develop a scalable application that responds to messages on a Kafka Topic.   
 The Knative project includes two components, Knative Serving and Knative Eventing.
 Knative Serving deals with the deployment, routing and scaling of the serverless containers.
