Updated to latest script and made text match.
Signed-off-by: Simon Woodman <swoodman@redhat.com>

--- a/_posts/2019-09-20-knative.md
+++ b/_posts/2019-09-20-knative.md
@@ -34,23 +34,12 @@ Checkout the [repository](https://github.com/matzew/lberk-misc/tree/eventing_080
 It may be necessary to update some of the configuration in the `setup.sh` such as the `vm-driver` if you do not have an existing Minikube configuration.
 You should be able to use `kvm2` on Linux and `hyperkit` on MacOS.
 
-First, run the `setup.sh` script which will start the installation.
-This will take some time and sometimes fails due to a race condition when installing some of the CRDs.
-```bash
-error: unable to recognize "STDIN": no matches for kind "Image" in version "caching.internal.knative.dev/v1alpha1"
-```
-
-If that failure does occur run the `hack.sh` script which will complete the installation. 
+Run the `setup.sh` script which will take some time to install the necessary components. 
 Note: It should go without saying that any deployment on Minikube is not suitable for production.
 This is even more the case here where the Strimzi installation uses a single node for the broker and ZooKeeper.
 
-Before developing an application there is one more step that must be completed - adding Kafka support to Knative.
 Knative Eventing comes with EventSources that can emit messages from Kubernetes platform events, GitHub events and based on time.
-The Kafka EventSource is not part of the core installation so must be added separately.
-
-```bash
-kubectl apply -f https://github.com/knative/eventing-contrib/releases/download/v0.8.0/kafka.yaml
-```
+The Kafka EventSource is not part of the core installation but the installation script adds that too.
 
 # Deploying an application
 
