Added text about partitions and scalability
Signed-off-by: Simon Woodman <swoodman@redhat.com>

--- a/_posts/2019-09-20-knative.md
+++ b/_posts/2019-09-20-knative.md
@@ -82,6 +82,11 @@ The `KafkaSource` includes properties for the address of the Kafka Broker, the t
 It is also possible to configure the source to use TLS encryption and SASL authentication if required by the Kafka broker - the Source is able to extract the relevant usernames, passwords and certificates from Kubernetes Secrets.
 Finally, in the `spec.sink` section the Source references the Serving application that was created earlier.
 
+If the Kafka Topic does not already exist in Strimzi the KafkaSource will create it.
+In this case the Topic is created with a single partition and consumer for that partition.
+For most applications this is not optimal and also limits the scalability of the EventSource.
+Internally the EventSource will create one concurrent consumer per partition and so increasing the number of partitions in the Topic improves throughput.
+To solve this, you can create a standard Strimzi `KafkaTopic` resource with the desired specification before creating the `KafkaSource`.
 
 ```yaml
 apiVersion: sources.eventing.knative.dev/v1alpha1
