Minishift to Minikube!!!
Signed-off-by: Simon Woodman <swoodman@redhat.com>

--- a/_posts/2019-09-20-knative.md
+++ b/_posts/2019-09-20-knative.md
@@ -27,7 +27,7 @@ Notice that Knative requires a lot of resources - at least 10GB of memory and 6 
 The installation of Knative is complicated and involves a number of steps. 
 For instance, first a ServiceMesh such as Istio, Ambassador or Gloo must be installed, then Knative Serving and finally Knative Eventing.
 
-Fortunately, one of the [contributors to Knative Eventing](http://github.com/matzew/) has developed a much simpler install script for Minishift.
+Fortunately, one of the [contributors to Knative Eventing](http://github.com/matzew/) has developed a much simpler install script for Minikube.
 This script will install not just Knative but all the dependencies and even Strimzi itself.
 Knative version 0.9.0 will be used along with the latest release of Strimzi (currently 0.13.0).
 Checkout the [repository](https://github.com/matzew/lberk-misc/tree/eventing_090_kafka_source).
@@ -77,7 +77,7 @@ logevents   http://logevents.default.example.com   logevents-c5jlv   logevents-c
 
 The Serving application automatically exposes an HTTP endpoint to invoke the service from inside and outside the Kubernetes cluster.
 However, we want the service to respond to messages on a Kafka Topic.
-Therefore we create a `KafkaSource` Custom Resource which controls the Topic -> application mapping.
+Therefore we create a `KafkaSource` Custom Resource which controls the Topic to application mapping.
 The `KafkaSource` includes properties for the address of the Kafka Broker, the topic to consume from and the consumer group that the consumer should belong to.
 It is also possible to configure the source to use TLS encryption and SASL authentication if required by the Kafka broker - the Source is able to extract the relevant usernames, passwords and certificates from Kubernetes Secrets.
 Finally, in the `spec.sink` section the Source references the Serving application that was created earlier.
@@ -106,7 +106,7 @@ spec:
 
 Save and deploy this yaml file using `kubectl apply -f source.yaml` to create the source.
 With everything deployed and connected, all that is left is to produce some messages to the `my-topic` Topic.
-In this example, Strimzi is not exposed outside the cluster so the simplest way is to run the `console-producer` in a pod inside Minishift.
+In this example, Strimzi is not exposed outside the cluster so the simplest way is to run the `console-producer` in a pod inside Minikube.
 
 ```bash
 kubectl -n kafka run kafka-producer -ti --image=strimzi/kafka:0.13.0-kafka-2.3.0 --rm=true --restart=Never -- bin/kafka-console-producer.sh --broker-list my-cluster-kafka-bootstrap:9092 --property "parse.key=true" --property "key.separator=: --topic my-topic"
@@ -147,7 +147,9 @@ One of the features of Knative Serving is that the application is scaled to zero
 Therefore after sending the message you will have to look at the logs quickly or the pod will disappear.
 In contrast, if you send a lot of messages you will see Knative automatically adding additional pods to deal with the load.
 
-This post has shown how to deploy Strimzi with Knative in Minishift and deploy a simple Knative Serving application.
+# Conclusion
+
+This post has shown how to deploy Strimzi with Knative in Minikube and deploy a simple Knative Serving application.
 Knative Eventing was used to connect this application to a Kafka Topic in order to consume messages.
 A follow up will demonstrate how to develop more complex scenarios and write your own Knative Serving applications.  
 
