Fixed link to canary releases
Signed-off-by: Paolo Patierno <ppatierno@live.com>

--- a/_posts/2021-11-07-canary.md
+++ b/_posts/2021-11-07-canary.md
@@ -118,6 +118,6 @@ Monitoring a Kafka cluster by verifying that it's behaving and working properly 
 Even when your cluster is not heavily used, it helps to check that everything is working fine to deal with the time when the real applications will start to use it.
 It is also useful to generate some traffic for validating A/B deployment and upgrades.
 
-The canary is just borned with its first release, so it is important for us to hear from the community about questions, issues but mostly improvements with new ideas!
+The canary is just borned with its first [release](https://github.com/strimzi/strimzi-canary/releases), so it is important for us to hear from the community about questions, issues but mostly improvements with new ideas!
 
 Any feedback and contribution are welcome, as always :)
