--- a/_posts/2021-11-07-canary.md
+++ b/_posts/2021-11-07-canary.md
@@ -16,7 +16,7 @@ This is where a new component in the Strimzi family comes into the picture ... p
 
 ## How a canary can help in a coal mine?
 
-When a Kafka cluster is successfully deployed using the Strimzi operator, the next step is to use it with your own applications or maybe, depending on your business, allowing external users to use it even for integration with your solution.
+When a Kafka cluster is successfully deployed using the Strimzi operator, the next step is to use it with your own applications or maybe, depending on your use case, allowing external users to use it even for integration with your solution.
 But one of the main aspects to consider is also the monitoring and alerting part in order to know if the Kafka cluster is really behaving and working correctly even when you are not really using it a lot.
 Having information about producing and consuming latency, as well as connection times, errors on exchanging messages and so on is really useful for that purpose.
 If your Kafka cluster is exposed to external users you would like to know if they are able to use the cluster itself; the canary can be used to simulate activity for identifying problems from a user perspective even when the cluster seems to be operating correctly.
@@ -25,7 +25,7 @@ Another use case could be when you are handling a fleet of Kafka clusters that y
 These are the main problems that the canary tries to help with.
 Of course, it is not a replacement for any kind of monitoring solution that can be used to show metrics coming from the Kafka cluster, as provided by the corresponding Strimzi examples for setting up Prometheus and Grafana together with useful dashboards.
 
-Like the coal miners using the canaries in the coal mines for early warning about toxic gases in the 20th century, the Strimzi canary can be used to raise alerts when the Kafka cluster is starting to behave badly.
+Like the miners using the canaries, as part of the [sentinel species](https://en.wikipedia.org/wiki/Sentinel_species), in the coal mines for early warning about toxic gases in the 20th century, the Strimzi canary can be used to raise alerts when the Kafka cluster is starting to behave badly.
 
 ## What the canary provides?
 
