--- a/_posts/2021-11-07-canary.md
+++ b/_posts/2021-11-07-canary.md
@@ -1,47 +1,47 @@
 ---
 layout: post
-title: "Use a canary in your Apache Kafka coal mine"
-date: 2021-11-08
+title: "Why should you use a canary in your Apache Kafka coal mine?"
+date: 2021-11-09
 author: paolo_patierno
 ---
 
-The Strimzi cluster operator is really great to deploy your Kafka cluster on Kubernetes and handling everything related to it.
-It helps with brokers configuration, managing the security aspects, doing the needed upgrades, scaling up and down and many more.
-But ... what if you want to have more insights about how the Kafka cluster is behaving?
+The Strimzi Cluster Operator is great for deploying your Kafka cluster on Kubernetes and handling everything related to it.
+It helps with brokers configuration, managing the security aspects, doing the needed upgrades, scaling up and down and much more.
+But ... what if you want to have more insight on Kafka cluster behavior?
 What if you want to know if the Kafka brokers are operating correctly so that clients can exchange messages?
 
-This is where a new component in the Strimzi family comes into the picture ... please welcome to the canary!
+This is where a new component in the Strimzi family comes into the picture ... please welcome the canary!
 
 <!--more-->
 
-## How a canary can help in a coal mine?
+## How can a canary help in a coal mine?
 
-When a Kafka cluster is successfully deployed using the Strimzi operator, the next step is to use it with your own applications or maybe, depending on your use case, allowing external users to use it even for integration with your solution.
-But one of the main aspects to consider is also the monitoring and alerting part in order to know if the Kafka cluster is really behaving and working correctly even when you are not really using it a lot.
-Having information about producing and consuming latency, as well as connection times, errors on exchanging messages and so on is really useful for that purpose.
-If your Kafka cluster is exposed to external users you would like to know if they are able to use the cluster itself; the canary can be used to simulate activity for identifying problems from a user perspective even when the cluster seems to be operating correctly.
-Another use case could be when you are handling a fleet of Kafka clusters that you want to update to a newer version doing a canary rolling; just updating a few of them, checking that everything is fine and only then continuing with the rest of the fleet.
+When a Kafka cluster is successfully deployed using the Strimzi operator, the next step is to use it with your applications or, depending on your use case, allowing external users to integrate with your solution and use it.
+Monitoring and alerting are other aspects to consider if you want to know if the Kafka cluster is working correctly, however much you are using it.
+It's really useful to have information about producing and consuming latency, connection times, errors on exchanging messages, and so on.
+If your Kafka cluster is exposed to external users, you might want to know if they are able to connect with and use the cluster. The canary simulate activity to identify problems from a user perspective, even when the cluster seems to be operating correctly.
+Another use case could be when you are handling a fleet of Kafka clusters that you want to update to a newer version. By rolling with canary and updating a few clusters only, you can check that everything is fine before continuing with the rest of the fleet.
 
 These are the main problems that the canary tries to help with.
-Of course, it is not a replacement for any kind of monitoring solution that can be used to show metrics coming from the Kafka cluster, as provided by the corresponding Strimzi examples for setting up Prometheus and Grafana together with useful dashboards.
+Canary is not a replacement for monitoring solutions that use Kafka cluster metrics. For example, with Prometheus and Grafana set up, you can use example Grafana dashboards provided by Strimzi for monitoring.
 
-Like the miners using the canaries, as part of the [sentinel species](https://en.wikipedia.org/wiki/Sentinel_species), in the coal mines for early warning about toxic gases in the 20th century, the Strimzi canary can be used to raise alerts when the Kafka cluster is starting to behave badly.
+Instead, like the miners who used canaries ([sentinel species](https://en.wikipedia.org/wiki/Sentinel_species)), as an early warning system of toxic gases in mines, the Strimzi canary can be used to raise alerts when a Kafka cluster is not operating as expected.
 
-## What the canary provides?
+## What does the canary provide?
 
-The canary tool is made by several internal services, used for different purposes:
+The canary tool comprises several internal services. Each service has a different purpose:
 
-* A `topic` service that is in charge to create and handle the dedicated topic (named `__strimzi_canary` by default) used by the canary producer and consumer to exchange messages.
-* A `producer` service that is used to send messages to the canary topic with a payload containing an identification number and mainly a timestamp, used to evaluate the end-to-end latency on the consumer side.
-* A `consumer` service that is used to receive the messages sent by the producer through the canary topic.
-* A `connection` service that just checks the connection to the brokers periodically; it opens and then immediately close a connection to each broker just to validate that it's reachable.
+* A `topic` service creates and handles a dedicated topic, which is named `__strimzi_canary` by default. The topic service is used by the canary producer and consumer to exchange messages.
+* A `producer` service sends messages to the canary topic with a payload containing an identification number and a timestamp. The service evaluates the end-to-end latency on the consumer side.
+* A `consumer` service receives the messages sent by the producer through the canary topic.
+* A `connection` service checks the connection to the brokers periodically. The service opens and then immediately closes a connection to each broker just to validate that it's reachable.
 * A `status` service that aggregates some of the producer and consumer metrics exposing them on a dedicated HTTP endpoint in a JSON format.
 
 When the canary starts for the first time, the `topic` service creates the dedicated topic with a number of partitions equals to the number of brokers, so that for each broker there is one partition.
-If the Kafka cluster is scaled up, the service adds more partitions to the topic assigning them in order to have the new partitions on the new brokers; the objective is always having one partition per broker so that when the producer and consumer exchange messages through the topic they are "testing" somehow all the brokers in the cluster using all partitions.
+If the Kafka cluster is scaled up, the service adds more partitions to the topic assigning them in order to have the new partitions on the new brokers. The objective is always having one partition per broker. When the producer and consumer exchange messages through the topic, in effect, they are "testing" all the brokers in the cluster using all partitions.
 If the Kafka cluster is scaled down, because it's not possible to remove partitions from a topic, the canary will just avoid using excess partitions (maybe reusing them if the cluster is scaled up again).
 
-While `producer` and `consumer` services exchange messages through the dedicated topic, different metrics are gathered and being exposed via the HTTP `/metrics` endpoint in Prometheus format.
+While `producer` and `consumer` services exchange messages through the dedicated topic, different metrics are gathered and exposed via the HTTP `/metrics` endpoint in Prometheus format.
 This endpoint can be scraped by a Prometheus server and the metric values can be used for defining alerts as well as being showed on Grafana dashboards.
 Information like the number of produced and consumed records, errors on sending or receiving records, producing and end to end latency are just a few of them.
 
@@ -60,10 +60,10 @@ strimzi_canary_records_consumed_total{clientid="strimzi-canary-client",partition
 ...
 ```
 
-Other interesting metrics are the ones providing latency histogram buckets in order to be able to process corresponding quantiles and defining alerts on them.
-The canary allows to configure the buckets that could be tailored to the Kafka cluster even based on resources (i.e. CPU, memory, ...) used for it that could influence the latency.
-In the repository, you can find a Python script that can be used to calculate the average producer/consumer/connection latencies from canary logs (enabled via the `VERBOSITY_LOG_LEVEL` env var).
-It can be useful to determine if the histogram buckets for the latency metrics are set optimally or anyway to extract good ones to use with your own Kafka cluster.
+Other interesting metrics are those providing latency histogram buckets in order to be able to process corresponding quantiles and define alerts on them.
+With canary, you can configure the buckets for the Kafka cluster based on resource usage that might impact latency, such as CPU or memory.
+The canary repository includes a Python script that can be used to calculate the average producer/consumer/connection latencies from canary logs. This is enabled through the `VERBOSITY_LOG_LEVEL` environment variable.
+You can determine if the histogram buckets for the latency metrics are set optimally or extract those which are useful for your own Kafka cluster.
 
 ```
 ...
@@ -78,7 +78,7 @@ I1107 15:13:28.421214       1 producer.go:100] Message sent: partition=2, offset
 ...
 ```
 
-Other than the metrics endpoint that is really useful to be scraped by a Prometheus server, there is a `/status` endpoint which exposes some aggregated data from such a metrics in JSON format; it can be useful for some automation where you don't have the ability to scrape and decoding the text Prometheus format but your tool can easily understand JSON text.
+As well as the useful `/metrics` endpoint, you can use the `/status` endpoint to expose aggregated metrics data in JSON format. This can be useful for automation where you don't have the ability to scrape and decode the text Prometheus format, but your tool can easily understand JSON text.
 Right now the only data provided through this endpoint is the percentage of messages that are produced and consumed successfully by the canary over a specific time window.
 
 ```json
@@ -97,8 +97,8 @@ You can get more information in the ["Configuration"]((https://github.com/strimz
 ## Allow the canary to fly in the mine
 
 The canary tool is not integrated within the Strimzi operator (yet); it could be a future improvement on the project in order to deploy it via a `Kafka` custom resource configuration.
-Right now the release related installation files provide all you need to run the canary on a Kubernetes cluster alongside your Kafka cluster.
-A `Deployment` file is available with a basic configuration to connect to a Kafka cluster without TLS support and exchanging messages every 10 seconds; the other main parameter needed to be changed by the user is about the bootstrap servers address.
+Right now the release-related installation files provide all you need to run the canary on a Kubernetes cluster alongside your Kafka cluster.
+A `Deployment` file is available with a basic configuration to connect to a Kafka cluster without TLS support and exchange messages every 10 seconds. You'll need to specify the bootstrap server address.
 
 ```yaml
 env:
@@ -110,14 +110,14 @@ env:
     value: "false"
 ```
 
-Together with the deployment, the installation provides a `Service` for exposing the 8080 port which is used for reaching the HTTP endpoints corresponding to metrics, status as well as liveness and readiness.
+Together with the deployment, the installation provides a `Service` for exposing the 8080 port that is used for reaching the HTTP endpoints corresponding to metrics, status, liveness, and readiness.
 
 ## Conclusion
 
 Monitoring a Kafka cluster by verifying that it's behaving and working properly is really simple thanks to the canary tool.
-Even when your cluster is not heavily used, it helps to check that everything is working fine to deal with the time when the real applications will start to use it.
-It is also useful to generate some traffic for validating A/B deployment and upgrades.
+Even when your cluster is not heavily used, it helps to check that everything is working fine for the time when the real applications start to use it.
+It is also useful for generating traffic for validating A/B deployments and upgrades.
 
-The canary is just borned with its first [release](https://github.com/strimzi/strimzi-canary/releases), so it is important for us to hear from the community about questions, issues but mostly improvements with new ideas!
+The canary has just hatched with its first [release](https://github.com/strimzi/strimzi-canary/releases), so it is important for us to hear from the community about questions, issues, and any suggestion for improvements!
 
 Any feedback and contribution are welcome, as always :)
