--- a/_posts/2021-11-07-canary.md
+++ b/_posts/2021-11-07-canary.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Why should you use a canary in your Apache Kafka coal mine?"
+title: "Why should you use a Canary in your Apache Kafka coal mine?"
 date: 2021-11-09
 author: paolo_patierno
 ---
@@ -63,7 +63,7 @@ strimzi_canary_records_consumed_total{clientid="strimzi-canary-client",partition
 Other interesting metrics are those providing latency histogram buckets in order to be able to process corresponding quantiles and define alerts on them.
 With canary, you can configure the buckets for the Kafka cluster based on resource usage that might impact latency, such as CPU or memory.
 The canary repository includes a Python script that can be used to calculate the average producer/consumer/connection latencies from canary logs. This is enabled through the `VERBOSITY_LOG_LEVEL` environment variable.
-You can determine if the histogram buckets for the latency metrics are set optimally or extract those which are useful for your own Kafka cluster.
+You can determine if the histogram buckets for the latency metrics are set optimally or extract those which are useful for your own Kafka cluster from the log.
 
 ```
 ...
