--- a/_posts/2021-11-07-canary.md
+++ b/_posts/2021-11-07-canary.md
@@ -39,7 +39,7 @@ The canary tool comprises several internal services. Each service has a differen
 
 When the canary starts for the first time, the `topic` service creates the dedicated topic with a number of partitions equals to the number of brokers, so that for each broker there is one partition.
 If the Kafka cluster is scaled up, the service adds more partitions to the topic assigning them in order to have the new partitions on the new brokers. The objective is always having one partition per broker. When the producer and consumer exchange messages through the topic, in effect, they are "testing" all the brokers in the cluster using all partitions.
-If the Kafka cluster is scaled down, because it's not possible to remove partitions from a topic, the canary will just avoid using excess partitions (maybe reusing them if the cluster is scaled up again).
+If the Kafka cluster is scaled down, because it's not possible to remove partitions from a topic, the canary will just avoid using excess partitions (reusing them if the cluster is scaled up again).
 
 While `producer` and `consumer` services exchange messages through the dedicated topic, different metrics are gathered and exposed via the HTTP `/metrics` endpoint in Prometheus format.
 This endpoint can be scraped by a Prometheus server and the metric values can be used for defining alerts as well as being showed on Grafana dashboards.
