Fix broken link in canary blog entry

--- a/_posts/2021-11-07-canary.md
+++ b/_posts/2021-11-07-canary.md
@@ -92,7 +92,7 @@ Right now the only data provided through this endpoint is the percentage of mess
 
 Everything described above is totally configurable using several environment variables, from the period at which messages are exchanged to the periodic connection check, from the histogram latency buckets to the time window for status data.
 Other than that, the Canary supports configuration for connecting to a cluster where TLS is enabled as well as different SASL authentication mechanisms like PLAIN and SCRAM-SHA.
-You can get more information in the ["Configuration"]((https://github.com/strimzi/strimzi-canary#configuration)) section of the project landing page.
+You can get more information in the ["Configuration"](https://github.com/strimzi/strimzi-canary#configuration) section of the project landing page.
 
 ## Allow the canary to fly in the mine
 
