Added survey link and deadline
Signed-off-by: Paolo Patierno <ppatierno@live.com>

--- a/_posts/2022-06-02-survey-2022.md
+++ b/_posts/2022-06-02-survey-2022.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Strimzi survey: we want to hear from you!"
-date: 2021-05-13
+date: 2021-06-02
 author: paolo_patierno
 ---
 
@@ -36,4 +36,4 @@ Reading the documentation, blog posts or the source code can be valuable to solv
 Regarding our blog, we would like to know what are the topics of most interest to you.
 We want to write useful content which could help the community to use the project or to learn more about Apache Kafka as well.
 
-If you are willing to take it, [here](LINK_PLACEHOLDER) is the survey that will be open until <DEADLINE_PLACEHOLDER>.
+If you are willing to take it, [here](https://www.surveymonkey.com/r/Strimzi-2022) is the survey that will be open until July 1st.
