Fixed comments Updated data of publishing
Signed-off-by: Paolo Patierno <ppatierno@live.com>

--- a/_posts/2022-06-03-survey-2022.md
+++ b/_posts/2022-06-03-survey-2022.md
@@ -1,15 +1,15 @@
 ---
 layout: post
 title: "Strimzi survey: we want to hear from you!"
-date: 2021-06-02
+date: 2021-06-03
 author: paolo_patierno
 ---
 
 With the help of the CNCF, we're running another survey of the Strimzi community.
 The main purpose is to hear from Strimzi users in order to know how they are using Strimzi.
-This is really useful to the maintainers to make better decisions in terms of new features and define the roadmap of the project itself.
+This is really useful to the maintainers and contributors to make better decisions in terms of new features and define the roadmap of the project itself.
 
-It would be great if you could take the 5–10 minutes needed to answer the 10 questions.
+It would be great if you could spare the 5–10 minutes needed to [take the survey](https://www.surveymonkey.com/r/Strimzi-2022).
 
 <!--more-->
 
@@ -21,7 +21,7 @@ Kubernetes API changes and deprecations can have an impact on the Strimzi projec
 
 Similarly, it's helpful to the project to understand how quickly users adopt new Strimzi releases, and what prompts them to upgrade.
 
-One of the most recent features was the Kafka Connect Build. You can read more about it [here](https://strimzi.io/blog/2021/03/29/connector-build/).
+One of the most interesting features was the Kafka Connect Build. You can read more about it [here](https://strimzi.io/blog/2021/03/29/connector-build/).
 It allows to build a new Kafka Connect image including the connectors you need, from different sources.
 Maybe not all the users in the community know about it or others are already using it.
 It is really useful for us to know.
